// Frame Format Definitions for struct-frame
// Defines message framing formats for communication over serial, network, or byte streams.

package frame_formats;

// Frame format type enumeration
enum FrameFormatType {
  NO_FORMAT = 0;
  MINIMAL_FRAME = 1;
  MINIMAL_FRAME_NO_CRC = 2;
  BASIC_FRAME = 3;
  BASIC_FRAME_NO_CRC = 4;
  TINY_FRAME = 5;
  TINY_FRAME_NO_CRC = 6;
  MINIMAL_FRAME_WITH_LEN = 7;
  MINIMAL_FRAME_WITH_LEN_NO_CRC = 8;
  MINIMAL_FRAME_WITH_LEN16 = 9;
  MINIMAL_FRAME_WITH_LEN16_NO_CRC = 10;
  BASIC_FRAME_WITH_LEN = 11;
  BASIC_FRAME_WITH_LEN_NO_CRC = 12;
  BASIC_FRAME_WITH_LEN16 = 13;
  BASIC_FRAME_WITH_LEN16_NO_CRC = 14;
  TINY_FRAME_WITH_LEN = 15;
  TINY_FRAME_WITH_LEN_NO_CRC = 16;
  TINY_FRAME_WITH_LEN16 = 17;
  TINY_FRAME_WITH_LEN16_NO_CRC = 18;
  BASIC_FRAME_WITH_SYS_COMP = 19;
  UBX = 20;
  MAVLINK_V1 = 21;
  MAVLINK_V2 = 22;
}

// Basic message payload included in all frame formats
message BasicMessage {
  uint8 msg_id = 1;
}

// ============================================================================
// NO FORMAT - Raw message, no framing
// Format: [MSG]
// Overhead: 0 bytes
message NoFormat {
  BasicMessage payload = 1;
}

// ============================================================================
// MINIMAL FRAME - No start bytes, just MSG_ID with CRC
// Format: [MSG_ID] [MSG] [CRC1] [CRC2]
// Overhead: 3 bytes
message MinimalFrame {
  BasicMessage payload = 1;
  uint8 crc_byte1 = 2;
  uint8 crc_byte2 = 3;
}

// MINIMAL FRAME NO CRC
// Format: [MSG_ID] [MSG]
// Overhead: 1 byte
message MinimalFrameNoCrc {
  BasicMessage payload = 1;
}

// ============================================================================
// BASIC FRAME - 2 start bytes with CRC (Recommended)
// Format: [START1=0x90] [START2=0x91] [MSG_ID] [MSG] [CRC1] [CRC2]
// Overhead: 5 bytes
message BasicFrame {
  uint8 start_byte1 = 1 [(hex) = 0x90];
  uint8 start_byte2 = 2 [(hex) = 0x91];
  BasicMessage payload = 3;
  uint8 crc_byte1 = 4;
  uint8 crc_byte2 = 5;
}

// BASIC FRAME NO CRC
// Format: [START1=0x90] [START2=0x95] [MSG_ID] [MSG]
// Overhead: 3 bytes
message BasicFrameNoCrc {
  uint8 start_byte1 = 1 [(hex) = 0x90];
  uint8 start_byte2 = 2 [(hex) = 0x95];
  BasicMessage payload = 3;
}

// ============================================================================
// TINY FRAME - 1 start byte with CRC (Recommended)
// Format: [START=0x70] [MSG_ID] [MSG] [CRC1] [CRC2]
// Overhead: 4 bytes
message TinyFrame {
  uint8 start_byte = 1 [(hex) = 0x70];
  BasicMessage payload = 2;
  uint8 crc_byte1 = 3;
  uint8 crc_byte2 = 4;
}

// TINY FRAME NO CRC
// Format: [START=0x72] [MSG_ID] [MSG]
// Overhead: 2 bytes
message TinyFrameNoCrc {
  uint8 start_byte = 1 [(hex) = 0x72];
  BasicMessage payload = 2;
}

// ============================================================================
// LENGTH-PREFIXED VARIANTS (1-byte length, up to 255 bytes)
// ============================================================================

// MINIMAL FRAME WITH LEN
// Format: [MSG_ID] [LEN] [MSG] [CRC1] [CRC2]
// Overhead: 4 bytes
message MinimalFrameWithLen {
  BasicMessage payload = 1;
  uint8 length = 2;
  uint8 crc_byte1 = 3;
  uint8 crc_byte2 = 4;
}

// MINIMAL FRAME WITH LEN NO CRC
// Format: [MSG_ID] [LEN] [MSG]
// Overhead: 2 bytes
message MinimalFrameWithLenNoCrc {
  BasicMessage payload = 1;
  uint8 length = 2;
}

// BASIC FRAME WITH LEN (Recommended for variable length)
// Format: [START1=0x90] [START2=0x92] [MSG_ID] [LEN] [MSG] [CRC1] [CRC2]
// Overhead: 6 bytes
message BasicFrameWithLen {
  uint8 start_byte1 = 1 [(hex) = 0x90];
  uint8 start_byte2 = 2 [(hex) = 0x92];
  BasicMessage payload = 3;
  uint8 length = 4;
  uint8 crc_byte1 = 5;
  uint8 crc_byte2 = 6;
}

// BASIC FRAME WITH LEN NO CRC
// Format: [START1=0x90] [START2=0x96] [MSG_ID] [LEN] [MSG]
// Overhead: 4 bytes
message BasicFrameWithLenNoCrc {
  uint8 start_byte1 = 1 [(hex) = 0x90];
  uint8 start_byte2 = 2 [(hex) = 0x96];
  BasicMessage payload = 3;
  uint8 length = 4;
}

// TINY FRAME WITH LEN (Recommended)
// Format: [START=0x71] [MSG_ID] [LEN] [MSG] [CRC1] [CRC2]
// Overhead: 5 bytes
message TinyFrameWithLen {
  uint8 start_byte = 1 [(hex) = 0x71];
  BasicMessage payload = 2;
  uint8 length = 3;
  uint8 crc_byte1 = 4;
  uint8 crc_byte2 = 5;
}

// TINY FRAME WITH LEN NO CRC
// Format: [START=0x73] [MSG_ID] [LEN] [MSG]
// Overhead: 3 bytes
message TinyFrameWithLenNoCrc {
  uint8 start_byte = 1 [(hex) = 0x73];
  BasicMessage payload = 2;
  uint8 length = 3;
}

// ============================================================================
// LENGTH-PREFIXED VARIANTS (2-byte length, up to 65535 bytes)
// ============================================================================

// MINIMAL FRAME WITH LEN16
// Format: [MSG_ID] [LEN_LO] [LEN_HI] [MSG] [CRC1] [CRC2]
// Overhead: 5 bytes
message MinimalFrameWithLen16 {
  BasicMessage payload = 1;
  uint16 length = 2;
  uint8 crc_byte1 = 3;
  uint8 crc_byte2 = 4;
}

// MINIMAL FRAME WITH LEN16 NO CRC
// Format: [MSG_ID] [LEN_LO] [LEN_HI] [MSG]
// Overhead: 3 bytes
message MinimalFrameWithLen16NoCrc {
  BasicMessage payload = 1;
  uint16 length = 2;
}

// BASIC FRAME WITH LEN16 (Recommended for large payloads)
// Format: [START1=0x90] [START2=0x93] [MSG_ID] [LEN_LO] [LEN_HI] [MSG] [CRC1] [CRC2]
// Overhead: 7 bytes
message BasicFrameWithLen16 {
  uint8 start_byte1 = 1 [(hex) = 0x90];
  uint8 start_byte2 = 2 [(hex) = 0x93];
  BasicMessage payload = 3;
  uint16 length = 4;
  uint8 crc_byte1 = 5;
  uint8 crc_byte2 = 6;
}

// BASIC FRAME WITH LEN16 NO CRC
// Format: [START1=0x90] [START2=0x97] [MSG_ID] [LEN_LO] [LEN_HI] [MSG]
// Overhead: 5 bytes
message BasicFrameWithLen16NoCrc {
  uint8 start_byte1 = 1 [(hex) = 0x90];
  uint8 start_byte2 = 2 [(hex) = 0x97];
  BasicMessage payload = 3;
  uint16 length = 4;
}

// TINY FRAME WITH LEN16
// Format: [START=0x74] [MSG_ID] [LEN_LO] [LEN_HI] [MSG] [CRC1] [CRC2]
// Overhead: 6 bytes
message TinyFrameWithLen16 {
  uint8 start_byte = 1 [(hex) = 0x74];
  BasicMessage payload = 2;
  uint16 length = 3;
  uint8 crc_byte1 = 4;
  uint8 crc_byte2 = 5;
}

// TINY FRAME WITH LEN16 NO CRC
// Format: [START=0x75] [MSG_ID] [LEN_LO] [LEN_HI] [MSG]
// Overhead: 4 bytes
message TinyFrameWithLen16NoCrc {
  uint8 start_byte = 1 [(hex) = 0x75];
  BasicMessage payload = 2;
  uint16 length = 3;
}

// ============================================================================
// SYSTEM/COMPONENT ID VARIANT (Recommended for multi-system networks)
// ============================================================================

// BASIC FRAME WITH SYS COMP
// Format: [START1=0x90] [START2=0x94] [SYS_ID] [COMP_ID] [MSG_ID] [MSG] [CRC1] [CRC2]
// Overhead: 7 bytes
message BasicFrameWithSysComp {
  uint8 start_byte1 = 1 [(hex) = 0x90];
  uint8 start_byte2 = 2 [(hex) = 0x94];
  uint8 system_id = 3;
  uint8 component_id = 4;
  BasicMessage payload = 5;
  uint8 crc_byte1 = 6;
  uint8 crc_byte2 = 7;
}

// ============================================================================
// THIRD PARTY PROTOCOLS
// ============================================================================

// UBX FRAME - u-blox GPS/GNSS protocol
// Format: [SYNC1=0xB5] [SYNC2=0x62] [CLASS] [ID] [LEN_LO] [LEN_HI] [MSG] [CK_A] [CK_B]
// Overhead: 8 bytes
message UbxFrame {
  uint8 sync1 = 1 [(hex) = 0xB5];
  uint8 sync2 = 2 [(hex) = 0x62];
  uint8 msg_class = 3;
  uint8 msg_id = 4;
  uint8 length_lo = 5;
  uint8 length_hi = 6;
  uint8 ck_a = 7;
  uint8 ck_b = 8;
}

// MAVLINK V1 FRAME - Legacy drone protocol
// Format: [STX=0xFE] [LEN] [SEQ] [SYS] [COMP] [MSG] [PAYLOAD] [CRC_LO] [CRC_HI]
// Overhead: 8 bytes
message MavlinkV1Frame {
  uint8 stx = 1 [(hex) = 0xFE];
  uint8 length = 2;
  uint8 sequence = 3;
  uint8 system_id = 4;
  uint8 component_id = 5;
  uint8 msg_id = 6;
  uint8 crc_lo = 7;
  uint8 crc_hi = 8;
}

// MAVLINK V2 FRAME - Modern drone protocol with extended message IDs
// Format: [STX=0xFD] [LEN] [INCOMPAT] [COMPAT] [SEQ] [SYS] [COMP] [MSG_ID x3] [PAYLOAD] [CRC] [SIG?]
// Overhead: 12-25 bytes
message MavlinkV2Frame {
  uint8 stx = 1 [(hex) = 0xFD];
  uint8 length = 2;
  uint8 incompat_flags = 3;
  uint8 compat_flags = 4;
  uint8 sequence = 5;
  uint8 system_id = 6;
  uint8 component_id = 7;
  uint8 msg_id_0 = 8;
  uint8 msg_id_1 = 9;
  uint8 msg_id_2 = 10;
  uint8 crc_lo = 11;
  uint8 crc_hi = 12;
}

// MAVLINK V2 SIGNATURE - Optional authentication (13 bytes)
message MavlinkV2Signature {
  uint8 link_id = 1;
  uint8 timestamp_0 = 2;
  uint8 timestamp_1 = 3;
  uint8 timestamp_2 = 4;
  uint8 timestamp_3 = 5;
  uint8 timestamp_4 = 6;
  uint8 timestamp_5 = 7;
  uint8 signature_0 = 8;
  uint8 signature_1 = 9;
  uint8 signature_2 = 10;
  uint8 signature_3 = 11;
  uint8 signature_4 = 12;
  uint8 signature_5 = 13;
}

// ============================================================================
// CONFIGURATION
// ============================================================================

// Runtime frame format configuration
message FrameFormatConfig {
  FrameFormatType format_type = 1;
  uint8 start_byte1 = 2 [(hex) = 0x90];
  uint8 start_byte2 = 3 [(hex) = 0x91];
  bool crc_enabled = 4;
  bool signing_enabled = 5;
}
